# OST

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS_8md.html  CMakeLists.txt  CNAME  Doxyfile  OST-guider-analysis_8md.html  OST.json  OSTClient.cpp  OSTClient.h  OSTClientCTL.cpp  OSTClientCTL.h  OSTClientFOC.cpp  OSTClientFOC.h  OSTClientGEN.cpp  OSTClientGEN.h  OSTClientGUI.cpp  OSTClientGUI.h  OSTClientPAN.cpp  OSTClientPAN.h  OSTClientSEQ.cpp  OSTClientSEQ.h  OSTCommon.cpp  OSTCommon.h  OSTController.cpp  OSTController.h  OSTImage.cpp  OSTImage.h  OSTParser.cpp  OSTParser.h  OSTTester.cpp  OST_messages.ods  QT5_2StellarSolverTester_2StellarSolverTester_8py.html  QT5_2stellarbatchsolver_2stellarbatchsolver_8py.html  QT5_2stellarsolver_2stellarsolver_8py.html  QT6_2StellarSolverTester_2StellarSolverTester_8py.html  QT6_2stellarbatchsolver_2stellarbatchsolver_8py.html  QT6_2stellarsolver_2stellarsolver_8py.html  README.md  (+4575 more)
.github/workflows/: GenDoxygenApi.yml  cmake.yml  doxygen.yml  jekyll-gh-pages.yml  jekyll.yml
CI/: CI-build.sh  CI-test.sh  CI-upload-release-latest.sh  CI-upload-release-tag.sh
cmake/cpack/: DebianPackage.cmake  GenerateChangelog.cmake  postinst  prerm
cmake_modules/: CMakeCommon.cmake
db/: ost.db
debian/: README.Debian  README.source  changelog  control  copyright  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  ostserver.cron.d.ex  ostserver.doc-base.ex  ostserver.postinst  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/ostserver/DEBIAN/: control
docs/: Gemfile  _config.yml
docs/_posts/: 2023-09-25-welcome-to-jekyll.markdown
html/: index.html  index2.html  index3.html  index4.html  ost.css
jekyll/: Gemfile  _config.yml
jekyll/_posts/: 2024-02-03-welcome-to-jekyll.markdown  2024-02-04-welcome-to-jekyll.markdown
launchpad/: CMakeLists.txt  ppp
launchpad/debian/: changelog  control  copyright  files  rules
launchpad/src/: dbmanager.cpp  wshandler.h
libs/: basemodule.cpp  basemodule.h  basemodule.json  basemodule.qrc  baseroot.cpp  baseroot.h  basicproperty.cpp  basicproperty.h  bayer.c  datastore.cpp  datastore.h  dbmanager.cpp  dbmanager.h  dms.cpp  dms.h  fileio.cpp  fileio.h  indimodule.cpp  indimodule.h  indimodule.json  numberproperty.cpp  numberproperty.h  profiles.cpp  profiles.h  propertytextdumper.cpp  propertytextdumper.h  propertyupdate.cpp  propertyvisitor.h  rootproperty.h  solver.cpp  solver.h  textproperty.h  translations.json
libs/model/: basicproperty.cpp  basicproperty.h  multiproperty.cpp  multiproperty.h  numberproperty.cpp  numberproperty.h  rootmulti.cpp  rootmulti.h  rootproperty.cpp  rootproperty.h  rootvalue.cpp  rootvalue.h  textproperty.cpp  textproperty.h
libs/model/element/: common.h  elementbase.cpp  elementbase.h  elementbool.cpp  elementbool.h  elementdate.cpp  elementdate.h  elementdatetime.cpp  elementdatetime.h  elementfloat.cpp  elementfloat.h  elementgraph.cpp  elementgraph.h  elementimg.cpp  (+17 more)
libs/utils/: elementfactory.cpp  elementfactory.h  elementjsondumper.cpp  elementjsondumper.h  elementset.cpp  elementset.h  elementtextdumper.cpp  elementtextdumper.h  elementupdate.cpp  elementupdate.h  elementvisitor.h  jsondumper.cpp  jsondumper.h  lovfactory.cpp  lovfactory.h  lovjsondumper.cpp  lovjsondumper.h  lovvisitor.h  modulejsondumper.cpp  modulejsondumper.h  propertyfactory.cpp  propertyfactory.h  propertyjsondumper.cpp  propertyjsondumper.h  propertytextdumper.cpp  propertytextdumper.h  propertyupdate.cpp  propertyupdate.h  propertyvisitor.h  translate.cpp  translate.h  translate.qrc  valuefactory.cpp  valuefactory.h  valuejsondumper.cpp  valuejsondumper.h  valueset.cpp  valuetextdumper.cpp  valuetextdumper.h  valueupdate.cpp  (+2 more)
resources/: basemodule.json  db.sql  dummy.json  resources.qrc
scxml/: coarsefocus.scxml  test.scxml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+228 more)
src/: basemodule.cpp  basemodule.h  client.cpp  client.h  controller.cpp  controller.h  datastructures.h  db.sql  dbmanager.cpp  dbmanager.h  git_version.cpp.in  globaldatastore.cpp  globaldatastore.h  globaldatastore.json  globaldatastore.qrc  image.cpp  image.h  indiclient.cpp  indiclient.h  jsonparser.cpp  jsonparser.h  logger.cpp  logger.h  loginpage.json  mFocuser.cpp  mFocuser.h  mMainctl.cpp  mMainctl.h  mNavigator.cpp  mSequence.cpp  mSequence.h  maincontrol.cpp  maincontrol.h  ost.cpp  properties.cpp  properties.h  resources.qrc  solver.cpp  solver.h  stars.txt  (+8 more)
src/model/: NumberValue.cpp  NumberValue.h  devcat.cpp  devcat.h  device.cpp  device.h  gridproperty.h  imageproperty.h  lightproperty.h  lightvalue.h  messageproperty.h  numberproperty.h  numbervalue.cpp  numbervalue.h  property.h  propertyfactory.cpp  propertyfactory.h  propertystore.cpp  propertystore.h  setup.cpp  setup.h  switchproperty.h  switchvalue.cpp  switchvalue.h  textproperty.h  textvalue.cpp  textvalue.h  value.h  valuebase.cpp  valuebase.h
src/modules/: basemodule.cpp  basemodule.h  dummy.cpp  dummy.h  dummy.json  focus.cpp  focus.h  indimodule.cpp  indipanel.cpp  maincontrol.cpp  maincontrol.h  maincontrol.json  module.cpp  module.h
src/properties/: ostproperty.cpp  ostproperty.h  switchproperty.cpp  switchproperty.h
src/ssolverutils/: fileio.cpp  fileio.h  imagelabel.h  solver.cpp  solver.h  stretch.cpp  stretch.h
src/translations/: ost_de.ts  ost_en.qm  ost_en.ts  ost_es.ts  ost_fr.qm  ost_fr.ts  ost_it.ts  translations.qrc
src/utils/: jsondumper.cpp  jsondumper.h  newpropertylogger.cpp  newpropertylogger.h  propertyfactory.cpp  propertyfactory.h  propertylogger.cpp  propertylogger.h  propertytextdumper.cpp  propertytextdumper.h  propertyvisitor.h  updatedpropertylogger.cpp  updatedpropertylogger.h
(+98 files in other folders)
